Refactored scrips, added scroll reveal library cdn, solved tabled overflow bug

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -2,6 +2,7 @@
     padding: 3rem 4rem;
     display: flex;
     flex-flow: column;
+    overflow: hidden;
 
     &__grid{
         display: grid;
@@ -12,7 +13,7 @@
         @media screen and (max-width:1100px) {
             margin: 6rem 0;
             margin-bottom: 0;
-            grid-template: 150px 1fr/ 100vw;
+            grid-template: 150px 1fr/ 1fr;
         }
     }
     
@@ -49,7 +50,7 @@
     }
     
     @media screen and (max-width: 1100px) {
-        padding: 5rem 1rem;
+        padding: 5rem 2rem;
     }
 }
 
