--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -5,7 +5,7 @@
     padding: 5rem 0;
     padding-top: 0;
     @media screen and (max-width: 850px) {
-        grid-template: 100px 1fr/ 49% 48%;
+        grid-template: 100px 1fr/ 48% 48%;
         padding: 1rem;
         grid-template-areas:
         "a a"
